--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
@@ -19,7 +18,11 @@
     "express-session": "^1.17.2",
     "mongoose": "^6.1.4",
     "mongoose-encryption": "^2.1.2",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
   }
